--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <div class="container">
       <div>
-        <h1 class="header_text">Do you wanna go out with me?</h1>
+        <h1 class="header_text">Do you wanna go on DATE with me?</h1>
       </div>
       <p>
         <a href="https://www.instagram.com/anurag247200/">@anurag247200</a>
