--- a/new.html
+++ b/new.html
@@ -40,7 +40,7 @@
     </div>
 
     <footer>
-      <p>crafted by @untoldcoding.</p>
+      <p>crafted by @Anurag</p>
     </footer>
   </body>
 </html>
