--- a/index.html
+++ b/index.html
@@ -3,44 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rose for you</title>
+    <title>Cocolate Day</title>
     <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Indie+Flower"
-      rel="stylesheet"
-      type="text/css"
-    />
   </head>
   <body>
-    <div class="container">
-      <div class="glass">
-        <div class="shine"></div>
-      </div>
-      <div class="thorns">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <div class="leaves">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <div class="petals">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <div class="text">
-        <h2></h2> Your smile is as beautiful as Rose <br /> 
-       I have Something For your Smile : <a href="new.html">Click Here</a></h2>
-      </div>
+    <div class="discontinued"></div>
+    <div class="main">
+      <p>I have Something <a href="new.html">Click Here</a></p>
     </div>
   </body>
 </html>
