--- a/new.html
+++ b/new.html
@@ -3,41 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rose for You</title>
+    <title>UntoldCoding</title>
     <link rel="stylesheet" href="new.css" />
   </head>
   <body>
-    <div class="wrap">
-      <h1>For You 💖</h1>
-      <div class="postcard1"></div>
-      <div class="postcard">
-        <div class="letter"></div>
-        <p>
-          <span>My Love,</span>
-          <br />
-          On this Rose Day, each petal symbolizes my admiration <br />for you.
-          Your presence colors my world with joy and warmth.Like a rose in full
-          bloom, your beauty captivates my heart. The red roses reflect the
-          passion that burns for you, while the white ones signify the purity of
-          our love. In the garden of life, you're my most cherished blossom.
-          Thank you for being my source of love and inspiration. Our journey
-          together is as sweet as the fragrance of roses. Happy Rose Day, my
-          love. Here's to many more petals of shared laughter and enduring love.
-          <br />
-          <span class="ullu">
-            Forever Yours,
-            <br />
-            Ullu</span
-          >
-        </p>
-        <div class="address">
-         
-        </div>
-      </div>
-    </div>
+    <button class="chocolate-button">
+      <div class="crumbs"></div>
+      <span class="bar">
+        <span class="text"> Chocolate Bar</span>
+      </span>
+    </button>
 
-    <footer>
-      <p>crafted by @Anurag</p>
-    </footer>
+    <div class="instructions">Click on Chocolate</div>
+
+    <script>
+      console.clear();
+
+      const elButton = document.querySelector(".chocolate-button");
+
+      elButton.addEventListener("mousedown", (event) => {
+        if (!elButton.matches(":focus")) {
+          elButton.style.setProperty("--x", event.offsetX);
+          elButton.style.setProperty("--y", event.offsetY);
+        }
+      });
+    </script>
   </body>
 </html>
